# spotify_pipeline

./: .gitignore  pyproject.toml  spotify.ipynb
spotify_pipeline/: Makefile  docker-compose.yml
spotify_pipeline/docker/: Dockerfile.api
spotify_pipeline/scripts/: start_api.sh
spotify_pipeline/src/spotify_pipeline/: definitions.py  io_manager.py  sensors.py
spotify_pipeline/src/spotify_pipeline/assets/: __init__.py  data_assets.py  model_assets.py  resources.py
spotify_pipeline/src/spotify_pipeline/defs/: model_assets.py
