[project]
name = "spotify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.12.3",
    "dagster-webserver>=1.12.3",
    "kagglehub>=0.3.13",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]

[tool.dagster]
module_name = "spotify_pipeline.src.spotify_pipeline.definitions"